# ferriscare

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.Docker.md  README.md  config.toml
.github/workflows/: ci-staging.yaml
kubernetes/chart/: values.yaml
kubernetes/chart/templates/: deployment.yaml
src/lib/: application.rs  domain.rs  env.rs  infrastructure.rs  lib.rs
src/lib/application/: http.rs  ports.rs
src/lib/application/http/: handlers.rs  responses.rs
src/lib/application/http/handlers/: create_professional.rs  get_professional.rs  health.rs
src/lib/application/ports/: messaging_ports.rs  messaging_subscriber_port.rs
src/lib/domain/: professional.rs  shared.rs
src/lib/domain/patient/: models.rs  ports.rs  services.rs
src/lib/domain/professional/: models.rs  ports.rs  services.rs
src/lib/domain/shared/: user_identity.rs
src/lib/infrastructure/: db.rs  keycloak.rs  professional.rs
src/lib/infrastructure/db/: neo4j.rs
src/lib/infrastructure/keycloak/: keycloak_adapter.rs
src/lib/infrastructure/messaging/: nats.rs
src/lib/infrastructure/patient/: neo4j.rs
src/lib/infrastructure/patient/neo4j/: patient_repository.rs
src/lib/infrastructure/professional/: neo4j.rs
src/lib/infrastructure/professional/neo4j/: professional_repository.rs
