[package]
name = "ferriscare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferriscare_server"
path = "src/bin/server/main.rs"

[lib]
name = "ferriscare"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
neo4rs = "0.8.0"
thiserror = "1.0.64"
tokio = "1.40.0"
uuid = { version = "1.10.0", features = ["v4"] }
