[package]
name = "ferriscare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferriscare_server"
path = "src/bin/server/main.rs"

[lib]
name = "ferriscare"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-keycloak-auth = "0.6.0"
dotenv = "0.15.0"
neo4rs = "0.8.0"
serde = "1.0.210"
thiserror = "1.0.64"
tokio = "1.40.0"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
