bench = []
test = []
example = []

[[bin]]
path = "src/bin/server/main.rs"
name = "ferriscare_server"
plugin = false
proc-macro = false
required-features = []

[package]
name = "ferriscare"
edition = "2021"
version = "0.0.1"

[dependencies]
anyhow = "1.0.92"
async-nats = "0.37.0"
axum = "0.7.7"
axum-keycloak-auth = "0.6.0"
dotenv = "0.15.0"
futures = "0.3.31"
neo4rs = "0.8.0"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.66"
tokio = "1.41.0"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.clap]
version = "4.5.20"
features = ["derive", "env"]

[dependencies.tower-http]
version = "0.6.1"
features = ["trace"]

[dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[lib]
path = "src/lib/lib.rs"
name = "ferriscare"
plugin = false
proc-macro = false
required-features = []
